--- a/views/result.ejs
+++ b/views/result.ejs
@@ -24,7 +24,8 @@
 
     table {
       border-collapse: collapse;
-      width: 100%;
+     width:100%;
+    
       margin-top: 20px;
     }
     .container {
@@ -40,14 +41,34 @@
       padding: 10px;
       text-align: left;
     }
+    button {
+          background-color: #4caf50;
+          color: #fff;
+          padding: 10px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+          margin-top: 3%;
+         
+         
+          width: 20%;
+        }
+    
+        button:hover {
+          background-color: #45a049;
+        }
 
     th {
       background-color: #f2f2f2;
     }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="/js/logic.js" defer></script>
 </head>
 <body>
-<div class="container" style="margin-top: 3%; margin-bottom: 2%; align-items: center;">
+  <div id="elements">
+<div   class="container" style="margin-top: 3%; margin-bottom: 2%; align-items: center;">
 
 
   <div class="info-line">
@@ -82,10 +103,20 @@
   </div>
   <div class="info-line">
     <div class="label">Result:</div>
-    <div><%=result.status%></div>
+    <div style="font-size: 25px; font-weight: bold;"><%=result.status%></div>
+  </div>
+  <div class="info-line">
+    <div class="label">Image:</div>
+    <div>
+    <img height="100px" width="80px" src="/images/<%=result.image%>" alt="">
+    </div>
   </div>
 </div>
   <table>
+   
+
+
+
     <thead>
       <tr>
         <th>SR. NO</th>
@@ -107,6 +138,9 @@
      
     </tbody>
   </table>
-
+</div>
+<div>
+  <button onclick="pdf()">Download Result</button>
+</div>
 </body>
 </html>
